[tool.poetry]
name = "rewards"
version = "0.1.0"
description = ""
authors = ["Hiroshi Nakai <hrsi.ad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.23.1"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
